# dvr

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dvr/: app.py  bot_telegram.py  motion_detector.py  path_file.py  video_recorder.py
