[project]
name = "dvr"
version = "0.1.0"
description = ""
authors = [
    {name = "Filipe Silva",email = "filipe.ufsc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "dvr", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
taskipy = "^1.14.1"
pytest = "^8.4.0"
pytest-cov = "^6.1.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath= "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'

pre_format = 'ruff check --fix'
format = 'ruff format'

pre_test = 'task lint' 
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
